# moleculec-c2

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml
include/: molecule2_reader.h  molecule_reader.h
mol/: import.json  import.mol  sample.json  sample.mol  types.json
molecule2/: Cargo.toml
molecule2/src/: lib.rs  reader.rs
molecule2/tests/: blockchain.rs
moleculec-c2/: Cargo.toml
moleculec-c2/src/: generator.rs  main.rs  utils.rs
rust/: Cargo.toml
rust/src/: lib.rs  reader.rs
rust/tests/: blockchain.rs
src/: generator.rs  main.rs  utils.rs
tests/blockchain/: CMakeLists.txt  Makefile  blockchain-api.h  blockchain-api2.h  blockchain-builder.h  blockchain.c
tests/blockchain_rust/: Cargo.toml
tests/blockchain_rust/src/: blockchain.rs  import.rs  main.rs  sample.rs  types.rs
tests/fuzzer/: CMakeLists.txt  Makefile  fuzzer_func.h  moleculec_c2_fuzzer.c
tests/sample/: CMakeLists.txt  Makefile  decl-only-impl.c  decl-only-sample.c  sample-api.h  sample-api2.h  sample-builder.h  sample.c
tests/types/: CMakeLists.txt  Makefile  types-api2.h  types-builder.c  types.c
tests/types_rust/: Cargo.toml
tests/types_rust/fuzz/: Cargo.toml
tests/types_rust/fuzz/fuzz_targets/: fuzz_target_1.rs
tests/types_rust/src/: lib.rs  main.rs  types_all_data.rs  types_api.rs  types_api2.rs  types_api2_mol2.rs  types_array.rs  types_moleculec_check.rs  types_option.rs  types_struct.rs  types_table.rs  types_vec.rs
tests/types_rust/src/tests/: mod.rs  test_base.rs  types_all_data.rs  types_api2_mol2.rs  types_array.rs  types_option.rs  types_struct.rs  types_table.rs  types_vec.rs
